# Ultra-Simple-Raytracer

./: .gitignore  CMakeLists.txt  main.cpp
include/: CMakeLists.txt  Vec3.hpp  color.hpp  hittable.hpp  ray.hpp  sphere.hpp
